Updated functionality for using attributes with spacy object inputs. Returned dataframe also includes attributes

--- a/notebooks/IAA-John-Development.ipynb
+++ b/notebooks/IAA-John-Development.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "102f0ebf",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "b66da284",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f4725109",
    "metadata": {},
    "outputs": [
@@ -282,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e685684b",
+   "execution_count": 19,
+   "id": "4788d8ab",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "3           food  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9475a4c0",
+   "execution_count": 20,
+   "id": "a0d55320",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "2         errors  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18a86633",
+   "id": "01045d4d",
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "6de8125e",
    "metadata": {},
    "outputs": [],
@@ -1226,6 +1226,27 @@
     "# caution: path[0] is reserved for script path (or '' in REPL)\n",
     "sys.path.insert(1, './Integrated_code/')\n",
     "import IAA_ as IAA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "27e3edcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6923076923076923"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IAA.pairwise_f1(45,15,25)"
    ]
   },
   {
@@ -1286,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee637dd",
+   "id": "0c116c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e469d517",
+   "id": "fae5d296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4965df27",
+   "id": "6ac5aee7",
    "metadata": {},
    "outputs": [],
    "source": [
