--- a/notebooks/Tutorial for IAA.ipynb
+++ b/notebooks/Tutorial for IAA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "fb664d9b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4538bb8d",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f551ab7e",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "608620bc",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "1         0  mississippi         29       40           GPE"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9806bf7e",
+   "execution_count": 10,
+   "id": "c1a709aa",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "2         0    lake city         51       60           GPE"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,8 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1f539ad0",
+   "execution_count": 11,
+   "id": "fc200047",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "3c4a2889",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,12 +493,12 @@
     "    extract doc1 and doc2s' spans within each spangroup. This argument is only relevant if passing in a list of spacy\n",
     "    documents (ie. can be ignored if passing in a list of tuple/list of ents/spans/spangroups or dataframe).\n",
     "    \n",
-    "__attributes__: List containing column names. These columns will be compared between the two annotations as additional matching criteria. Only applies to dataframes."
+    "__attributes__: List containing column names. These columns will be compared between the two annotations as additional matching criteria."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f207362f",
    "metadata": {},
    "outputs": [
@@ -550,13 +550,13 @@
        "0  0.8  0.666667        1.0               2                1               0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IAA.corpus_agreement([doc1],[doc2],loose=0,labels=0)[0]"
+    "IAA.corpus_agreement([doc1],[doc2],loose=0,labels=0,attributes=['is_historical','is_negated'])[0]"
    ]
   },
   {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "19fedcbf",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "2        51-60                 51            0                  0        0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "074fe5ac",
+   "id": "57369034",
    "metadata": {},
    "source": [
     "### *extract_ents*\n",
@@ -753,8 +753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d3433b22",
+   "execution_count": 15,
+   "id": "f38ec7f1",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "1         0  mississippi         29       40           GPE"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,8 +824,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3821c537",
+   "execution_count": 16,
+   "id": "8e8fecac",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "2         0    lake city         51       60           GPE"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "76edbe15",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
        "({0: [0], 1: [1]}, {0: [0], 1: [1]})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "fda6cd22",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "00b8e836",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
        "0.8"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
