Updated IAA tutorial with more thorough descriptions

--- a/notebooks/Tutorial for IAA.ipynb
+++ b/notebooks/Tutorial for IAA.ipynb
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1a709aa",
+   "id": "d92c566d",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc200047",
+   "id": "80bac339",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
     "    extract doc1 and doc2s' spans within each spangroup. This argument is only relevant if passing in a list of spacy\n",
     "    documents (ie. can be ignored if passing in a list of tuple/list of ents/spans/spangroups or dataframe).\n",
     "    \n",
-    "__attributes__: List containing column names. These columns will be compared between the two annotations as additional matching criteria."
+    "__attributes__: List containing column names. These columns will be compared between the two annotations as additional matching criteria and included in the returned dataframe (second element returned by corpus_agreement, explained below). Note: there is currently no way to include the attributes in the returned dataframe without including the attributes as matching criteria for the IAA calculations. If you would like the returned dataframe to include certain attributes, but calculate the IAA without comparing the attributes, you must run two separate instances of corpus_agreement: one with the appropriate attributes argument to get the dataframe with attributes, and two without without attributes argument to get the IAA calculation."
    ]
   },
   {
@@ -708,7 +708,9 @@
     "\n",
     "__Duplicate Matches?__: Boolean indicate if an entity included in the row matches multiple entities of the other annotation.\n",
     "\n",
-    "__Overlap?__: Boolean indicating if there is any overlap (ie. match) between entities in this row. In other words, this will be a 1 if there is at least one entity in Annotation_1 and at least one entity in Annotation_2."
+    "__Overlap?__: Boolean indicating if there is any overlap (ie. match) between entities in this row. In other words, this will be a 1 if there is at least one entity in Annotation_1 and at least one entity in Annotation_2.\n",
+    "\n",
+    "__A1_... or A2_...__ : Attributes for Annotation 1 and Annotation 2. These are returned as A1 or A2, representing Annotation 1 or 2, followed by the attribute name."
    ]
   },
   {
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57369034",
+   "id": "2a36d330",
    "metadata": {},
    "source": [
     "### *extract_ents*\n",
@@ -754,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f38ec7f1",
+   "id": "acde00bd",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8e8fecac",
+   "id": "3d615a3f",
    "metadata": {},
    "outputs": [
     {
